# tendril

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  tendril.example.toml
.github/workflows/: ci.yml
crates/pulse/: Cargo.toml
crates/pulse/src/: main.rs
crates/pulse/tests/: pulse_once.rs
crates/tendril-core/: Cargo.toml
crates/tendril-core/src/: node.rs  protocol.rs
crates/tendril-daemon/: Cargo.toml
crates/tendril-daemon/src/: config.rs  demo.rs  listener.rs  main.rs  mesh.rs  recovery.rs  registry.rs
crates/tendril-daemon/tests/: demo.rs  inspect.rs
docs/: architecture.md  project-notes.md
scripts/: demo.sh
