[package]
name = "pulse"
version = "0.1.0"
edition = "2021"
description = "Pulse beacon — announce your presence, let the mesh find you"

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
tendril-core = { path = "../tendril-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
